Added links for update and new on product listings, and website link on show and marketplace

--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -32,11 +32,20 @@
             <i class="glyphicon glyphicon-star"></i>
             (7)
           </div>
+          <a ng-href="{{product.website}}" class="website-link" target="_blank">
+            <i class="glyphicon glyphicon-link"></i>
+          </a>
           <a ng-href="/#/product/{{product.id}}" class="details-link">
             View Details
           </a>
         </div>
       </div>
     </div>
+    <div class="new-product-link">
+      <a href="https://www.formstack.com/forms/?1874808-i8hgbPcov5" class="website-link" target="_blank">
+        <i class="glyphicon glyphicon-plus"></i> Add your product...
+      </a>
+    </div>
+
   </div>
 </div>
