--- a/public/the_bridge_templates/product/show.html
+++ b/public/the_bridge_templates/product/show.html
@@ -28,6 +28,10 @@
         <i class="glyphicon glyphicon-star"></i>
         (7)
       </div>
+      <div class='actions'>
+        <a ng-href="{{product.website}}"><i class="glyphicon glyphicon-link"></i></a>
+        <a ng-href="{{product.update_link}}"><i class="glyphicon glyphicon-edit"></i></a>
+      </div>
 
 
       <tabset>
