Opening product links in new tab

--- a/public/the_bridge_templates/product/show.html
+++ b/public/the_bridge_templates/product/show.html
@@ -29,8 +29,8 @@
         (7)
       </div>
       <div class='actions'>
-        <a ng-href="{{product.website}}"><i class="glyphicon glyphicon-link"></i></a>
-        <a ng-href="{{product.update_link}}"><i class="glyphicon glyphicon-edit"></i></a>
+        <a ng-href="{{product.website}}" target="_blank"><i class="glyphicon glyphicon-link"></i></a>
+        <a ng-href="{{product.update_link}}" target="_blank"><i class="glyphicon glyphicon-edit"></i></a>
       </div>
 
 
