--- a/public/the_bridge_templates/release_notes/index.html
+++ b/public/the_bridge_templates/release_notes/index.html
@@ -6,7 +6,8 @@
 <h2>Release Notes</h2>
 
 <div ng-controller="ReleaseNotesController as releaseNotes">
-	<div ng-repeat="post in release_notes">
-		<div ng-bind-html="post.content"></div>
+	<div ng-repeat="post in release_notes" class="release-note">
+    <div ng-bind-html="post.title" class="title"></div>
+		<div ng-bind-html="post.content" class="content"></div>
 	</div>
 </div>
