links to welcome

--- a/public/the_bridge_templates/static/welcome.html
+++ b/public/the_bridge_templates/static/welcome.html
@@ -4,7 +4,7 @@
         <div class="headline">
             <div class="container">
                 <h1>Open[Fn]</h1>
-                <h2>Technology is not the answer</br>but it shouldn't be the problem</h2>
+                <h2>Technology isn't the answer,</br>but it shouldn't be the problem.</h2>
             </div>
         </div>
     </header>
@@ -16,11 +16,11 @@
 
         <!-- First Featurette -->
         <div class="featurette" id="about">
-            <img class="featurette-image img-circle img-responsive pull-right" src="images/dark.png">
-            <h2 class="featurette-heading">open<strong>Marketplace</strong>
+            <a href="http://the-staging-bridge.herokuapp.com/#/marketplace"><img class="featurette-image img-circle img-responsive pull-right" src="images/dark.png"></a>
+            <a href="http://the-staging-bridge.herokuapp.com/#/marketplace"><h2 class="featurette-heading">open<strong>Marketplace</strong></a>
                 <span class="text-muted">helps you find the tools you need</span>
             </h2>
-            <p class="lead">It's an app store for impact-first organizations. Search, filter, compare features and price, see real usage patterns and reviews. Finding the <em>right</em> Android data capture tool (or SMS platform, MIS, visualization aid, etc.) to fit your organization's needs just got a lot easier.</p>
+            <p class="lead">It's an app store for impact-first organizations. Search, filter, compare features and prices, see real usage patterns and reviews. Finding the <em>right</em> Android data capture tool (or SMS platform, MIS, visualization aid, etc.) to fit your organization's needs just got a lot easier.</p>
         </div>
 
         <hr class="featurette-divider">
@@ -31,7 +31,7 @@
             <h2 class="featurette-heading">open<strong>Integrations</strong>
                 <span class="text-muted">makes apps more powerful</span>
             </h2>
-            <p class="lead">Need surveys captured with ODK to show up in your Salesforce system? Want MPESA payments to sync with your clinic management platform? Don't spend money on custom code. Make it happen with a simple drag-and-drop interface. With a totally open-source and modular design, the number of endpoints is growing.</p>
+            <p class="lead">It's a bridge that connects your data across your technologies. Need surveys captured with ODK to show up in your Salesforce system? Want MPESA payments to sync with your clinic management platform? Don't spend money on custom code. Make it happen with a simple drag-and-drop wizard. With an open-source, efficient, modular design, the number of endpoints will continue to grow.</p>
         </div>
 
         <hr class="featurette-divider">
@@ -42,7 +42,7 @@
             <h2 class="featurette-heading">open<strong>Ideas</strong>
                 <span class="text-muted">promotes conversations about technology's role in behavior change</span>
             </h2>
-            <p class="lead">75% of IT implementations fail. Want to learn from developers who abhore custom-coded solutions? Or CIOs who understand that culture is what makes or breaks a technology project? Want to learn how and why real organizations are both succeeding and failing to implement technologies geared at growing their social impact? Join the conversation.</p>
+            <p class="lead">75% of IT implementations fail. Want to learn from developers who abhor custom-coded solutions? Or CIOs who understand that culture is what makes or breaks a technology project? Want to learn how and why real organizations are both succeeding and failing to implement technologies geared at growing their social impact? Join the conversation.</p>
         </div>
 
         <hr class="featurette-divider">
@@ -51,7 +51,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Open[Fn] is a not-for-profit organization. All of our code can be forked on Github under the GPLv3.0 license.</p>
+                    <p>Open[Fn] is a not-for-profit organization. We need your help to make technology fulfil the promise it made to international development. <a href="mailto:downs.taylor@gmail.com">Contact us</a> if you'd like to pitch in. All of our code is available on Github under the GPLv3.0 license.</p>
                 </div>
             </div>
         </footer>
