final link change

--- a/public/the_bridge_templates/static/welcome.html
+++ b/public/the_bridge_templates/static/welcome.html
@@ -16,8 +16,8 @@
 
         <!-- First Featurette -->
         <div class="featurette" id="about">
-            <a href="http://the-staging-bridge.herokuapp.com/#/marketplace"><img class="featurette-image img-circle img-responsive pull-right" src="images/dark.png"></a>
-            <a href="http://the-staging-bridge.herokuapp.com/#/marketplace"><h2 class="featurette-heading">open<strong>Marketplace</strong></a>
+            <a href="http://openfn.org/marketplace"><img class="featurette-image img-circle img-responsive pull-right" src="images/dark.png"></a>
+            <h2 class="featurette-heading">open<strong>Marketplace</strong>
                 <span class="text-muted">helps you find the tools you need</span>
             </h2>
             <p class="lead">It's an app store for impact-first organizations. Search, filter, compare features and prices, see real usage patterns and reviews. Finding the <em>right</em> Android data capture tool (or SMS platform, MIS, visualization aid, etc.) to fit your organization's needs just got a lot easier.</p>
@@ -27,7 +27,7 @@
 
         <!-- Second Featurette -->
         <div class="featurette" id="services">
-            <img class="featurette-image img-circle img-responsive pull-left" src="images/grey.png">
+            <a href="http://openfn.org/mappings"><img class="featurette-image img-circle img-responsive pull-left" src="images/grey.png"></a>
             <h2 class="featurette-heading">open<strong>Integrations</strong>
                 <span class="text-muted">makes apps more powerful</span>
             </h2>
@@ -38,7 +38,7 @@
 
         <!-- Third Featurette -->
         <div class="featurette" id="contact">
-            <img class="featurette-image img-circle img-responsive pull-right" src="images/teal.png">
+            <a href="http://openfn.org/release-notes"><img class="featurette-image img-circle img-responsive pull-right" src="images/teal.png"></a>
             <h2 class="featurette-heading">open<strong>Ideas</strong>
                 <span class="text-muted">promotes conversations about technology's role in behavior change</span>
             </h2>
@@ -51,7 +51,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Open[Fn] is a not-for-profit organization. We need your help to make technology fulfil the promise it made to international development. <a href="mailto:downs.taylor@gmail.com">Contact us</a> if you'd like to pitch in. All of our code is available on Github under the GPLv3.0 license.</p>
+                    <p>Open[Fn] is a not-for-profit organization. We need your help to make technology fulfil the promise it made to development. <a href="mailto:downs.taylor@gmail.com">Contact us</a> if you'd like to pitch in. We beleive in open-source, and all of our code is available on Github under the GPLv3.0 license.</p>
                 </div>
             </div>
         </footer>
