--- a/public/the_bridge_templates/mappings/edit.html
+++ b/public/the_bridge_templates/mappings/edit.html
@@ -1,6 +1,7 @@
-<div id="errorExplanation" class='text-danger' ng-show="errors">
+<div id="errorExplanation" class='text-danger' ng-show="errors || !mapping.can_be_enabled">
   <ul>
     <li ng-repeat="error in errors">{{error}}</li>
+    <li ng-show="!mapping.can_be_enabled">You need more credits to enable this mapping. Contact the administrator or disable any currently- enabled mappings to get more.</li>
   </ul>
 </div>
 
@@ -15,7 +16,10 @@
 
 <div class="checkbox">
   <label>
-    <input type="checkbox" ng-model='mapping.active' ng-checked='mapping.active' ng-change="saveMapping()"> Active
+    <input type="checkbox" ng-model='mapping.enabled' ng-checked='mapping.enabled' ng-change="saveMapping()" ng-disabled="!mapping.can_be_enabled"> Enabled
+  </label>
+  <label>
+    <input type="checkbox" ng-model='mapping.active' ng-checked='mapping.active' ng-change="saveMapping()" ng-disabled="!mapping.enabled || !mapping.can_be_enabled"> Collect automatically (every 10 min)
   </label>
 </div>
 
