Validates credits when enabling on create

--- a/public/the_bridge_templates/mappings/new.html
+++ b/public/the_bridge_templates/mappings/new.html
@@ -13,7 +13,10 @@
 
 <div class="checkbox">
   <label>
-    <input type="checkbox" ng-model='mapping.active' ng-checked='mapping.active'> Active
+    <input type="checkbox" ng-model='mapping.enabled' ng-checked='mapping.enabled'> Enabled
+  </label>
+  <label>
+    <input type="checkbox" ng-model='mapping.active' ng-checked='mapping.active'> Collect automatically (every 10 min)
   </label>
 </div>
 
