Added linebreak to error and 20px padding between status options in mappings edit and new

--- a/public/the_bridge_templates/mappings/edit.html
+++ b/public/the_bridge_templates/mappings/edit.html
@@ -14,7 +14,7 @@
   <input type="text" ng-model="mapping.name" class='form-control' ng-change="saveMapping()" />
 </div>
 
-<div class="checkbox">
+<div class="checkbox mapping-status-options">
   <label>
     <input type="checkbox" ng-model='mapping.enabled' ng-checked='mapping.enabled' ng-change="saveMapping()" ng-disabled="!mapping.can_be_enabled"> Enabled
   </label>
