--- a/public/the_bridge_templates/mappings/new.html
+++ b/public/the_bridge_templates/mappings/new.html
@@ -11,7 +11,7 @@
   <input type="text" ng-model="mapping.name" class='form-control' />
 </div>
 
-<div class="checkbox">
+<div class="checkbox mapping-status-options" >
   <label>
     <input type="checkbox" ng-model='mapping.enabled' ng-checked='mapping.enabled'> Enabled
   </label>
