--- a/public/the_bridge_templates/product/show.html
+++ b/public/the_bridge_templates/product/show.html
@@ -1,8 +1,6 @@
 <div ng-controller="ProductController as productCtrl" class="row">
-  <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-  <!-- Filters -->
-  </div>
-  <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10"> 
+ <div class="container">
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"> 
     <div class="search-container row">
       <div class="search-box col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <h3>open<strong>Marketplace</strong></h3>
@@ -68,4 +66,5 @@
       </tabset>
     </div>
   </div>
+</div>
 </div>
