--- a/public/the_bridge_templates/release_notes/index.html
+++ b/public/the_bridge_templates/release_notes/index.html
@@ -1,3 +1,4 @@
+<div class="container">
 <h1>
 	open<strong>Ideas</strong>
 </h1>
@@ -10,4 +11,5 @@
     <div ng-bind-html="post.title" class="title"></div>
 		<div ng-bind-html="post.content" class="content"></div>
 	</div>
+</div>
 </div>
