--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -1,34 +1,44 @@
+<div class="ideas">
 <div ng-controller="MarketplaceController as marketplace" class="row">
-<div class="container">
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"> 
-    <div class="search-container row">
-      <div class="search-box col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        <h3>open<strong>Marketplace</strong></h3>
-        <h4 class="sub-heading"><strong>Find the technology you need to grow your impact.</strong></h4>
-        <div class="search-field no-padding col-lg-8 col-md-8 col-sm-6 col-xs-12">
+<header class="header-image">
+  <div class="headline">
+    <h1>open<strong>Marketplace</strong></h1>
+    <h3>Find the technology you need to grow your impact.</h3>
+ 
+    <div class="container">
+      <div class="search-field">
           <input type:"text" class="form-control" placeholder="Start typing to search..." ng-model="searchText">
-        </div>
-        <div class="btn-group search-type">
-          <label class="btn btn-default">Open Source?</label>
-          <label class="btn btn-default" ng-model="searchFilters.integrated" btn-checkbox>Integrated?</label>
-        </div>
+      </div>
+
+      <div class="new-product-link">
+          <a href="https://www.formstack.com/forms/?1874808-i8hgbPcov5" class="website-link" target="_blank">
+          <i class="glyphicon glyphicon-plus"></i> Add your product...</a>
+
+          <label style="margin-left:12em" class="btn website-link" ng-model="searchFilters.integrated" btn-checkbox>Integrated?</label>
+
       </div>
     </div>
+</header>
 
+<div class="featurette dark">
+  <hr class="light">
+  <hr class="dark">
+
+  <div class="container">
     <div class="product-list row" ontouchstart="this.classList.toggle('hover');">
       <div ng-repeat="product in products | filter:filterProducts" class="product-container col-lg-6 col-md-6 col-sm-6 col-xs-12">
         <div class="product">
-          <h3 class="name">
+          <h3 class="title">
             {{product.name}}
           </h3>
-          <div class='description'>
+          <div class='content'>
             {{product.description}}
           </div>
           <div class='rating'>
             <i class="glyphicon glyphicon-star"></i>
             <i class="glyphicon glyphicon-star"></i>
             <i class="glyphicon glyphicon-star"></i>
-            (7)
+            (237)
           </div>
           <a ng-href="{{product.website}}" class="website-link" target="_blank">
             <i class="glyphicon glyphicon-link"></i>
@@ -39,12 +49,10 @@
         </div>
       </div>
     </div>
-    <div class="new-product-link">
-      <a href="https://www.formstack.com/forms/?1874808-i8hgbPcov5" class="website-link" target="_blank">
-        <i class="glyphicon glyphicon-plus"></i> Add your product...
-      </a>
-    </div>
+
 
   </div>
+  <hr class="dark">
+  <hr class="light">
 </div>
 </div>
