--- a/public/the_bridge_templates/mappings/sf_row.html
+++ b/public/the_bridge_templates/mappings/sf_row.html
@@ -31,8 +31,8 @@
               <span class='glyphicon glyphicon-remove white'></span>
             </a>
 
-            <a href='#' class='btn btn-warning pull-right' ng-click='refreshSfFields(sfObject)'>
-              Refresh Fields
+            <a href='#' class='btn btn-info pull-right' ng-click='refreshSfFields(sfObject)'>
+              Refresh Object
               <span class='glyphicon glyphicon-refresh white'></span>
             </a>
           </div>
