--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -43,9 +43,14 @@
           <a ng-href="{{product.website}}" class="website-link" target="_blank">
             <i class="glyphicon glyphicon-link"></i>
           </a>
-          <a ng-href="/#/product/{{product.id}}" class="details-link">
+          <a ng-href="" class="details-link">
             View Details
           </a>
+
+<!--          <a ng-href="/#/product/{{product.id}}" class="details-link">
+            View Details
+          </a> -->
+
         </div>
       </div>
     </div>
