--- a/public/the_bridge_templates/static/welcome.html
+++ b/public/the_bridge_templates/static/welcome.html
@@ -48,7 +48,7 @@
         <div class="col-md-6 col-md-offset-1 text-right">
           <h2 class="featurette-heading">
               open<strong>Integrations</strong>
-              makes<br/> apps more powerful
+              make<br/> apps more powerful
           </h2>
           <p class="lead">
             It's a bridge that connects your data across your technologies. 
@@ -75,7 +75,7 @@
         <div class="col-md-6 col-md-pull-6">
           <h2 class="featurette-heading">
             open<strong>Ideas</strong>
-            promotes conversations<br/> about technology's role in behavior
+            promote conversations<br/> about technology's role in behavior
             change
           </h2>
           <p class="lead">
@@ -95,26 +95,44 @@
     <hr class="light">
   </div>
 
-  <div class="container">
-    <footer>
+    <div class="featurette" id="integrations">
+    <div class="container">
+
       <div class="row">
-        <div class="text-center">
-          <a href="#" class="btn btn-primary btn-lg">
+        <div class="col-md-5">
+        </div>
+        <div class="col-md-6 col-md-offset-1 text-right">
+          <h2 class="featurette-heading">
+              open<strong>Partnerships</strong>
+              make<br/> this possible
+          </h2>
+          <p class="lead">
+            Vera Solutions, The Salesforce Foundation, Echoing Green, and Mulago's Rainer Arnhold Fellowship Program all support Open[Fn]'s work.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+ <div class="featurette dark" id="marketplace">
+    <hr class="light">
+    <hr class="dark">
+    <footer>
+      <div class="featurette dark">  
+      <div class="row">
+              <div class="text-center">
+          <a href="mailto:td@verasolutions.org" class="btn btn-primary btn-lg">
             <i class="fa fa-life-buoy"></i>
-            Donate
+            Help Out!
           </a>
         </div>
       </div>
       <div class="row">
         <div class="col-sm-10 col-sm-offset-1">
           <p class="text-center">
-            Open[Fn] is a not-for-profit organization. 
-            We need your help to make technology fulfil the promise it</br> 
-            made to development. 
-            <a href="mailto:downs.taylor@gmail.com">Contact us</a> 
-            if you'd like to pitch in. 
-            We beleive in open-source, and all of our code<br/> is 
-            available on Github under the GPLv3.0 license.
+            Open[Fn] needs your help. We're currently seekiing editors, developers, and philanthropic funding.
+            </br>Contact us if you'd like to pitch in. We beleive in open-source, and all of our code
+            <br/> is available on Github under the GPLv3.0 license.
           </p>
         </div>
       </div>
