--- a/public/the_bridge_templates/release_notes/index.html
+++ b/public/the_bridge_templates/release_notes/index.html
@@ -24,6 +24,16 @@
 
   <div class="container">
     <footer>
+
+      <div class="row">
+              <div class="text-center">
+          <a href="mailto:td@verasolutions.org" class="btn btn-primary btn-lg">
+            <i class="fa fa-life-buoy"></i>
+            Help Out!
+          </a>
+        </div>
+      </div>
+      
       <div class="row">
         <div class="col-sm-10 col-sm-offset-1">
           <p class="text-center">
