removed grid from partnerships

--- a/public/the_bridge_templates/static/welcome.html
+++ b/public/the_bridge_templates/static/welcome.html
@@ -111,18 +111,14 @@
     <hr class="light">
     <div class="container">
 
-      <div class="row">
-        <div class="col-md-5">
-        </div>
-        <div class="col-md-6 col-md-offset-1 text-right">
+      <div class="row text-right">
           <h2 class="featurette-heading">
               open<strong>Partnerships</strong>
               make<br/> this all possible
           </h2>
           <p class="lead">
-            We grew out of <a href="http://www.verasolutions.org" target="_blank">Vera Solutions</a>, technology partner to over 100 leading impact-first organizations around the world, and have received generous support from <a href="http://www.echoinggreen.org" target="_blank">Echoing Green</a>, <a href="http://www.dasra.org" target="_blank">Dasra</a>, <a href="http://www.salesforcefoundation.org/" target="_blank">The Salesforce Foundation</a>, and <a href="http://www.rainerfellows.org" target="_blank">The Rainer Arnhold Fellowship Program</a>.
+            We grew out of <a href="http://www.verasolutions.org" target="_blank">Vera Solutions</a>, technology partner to over 100 leading <em>impact-first</em> organizations in almost 40 countries, and have received generous support from <a href="http://www.echoinggreen.org" target="_blank">Echoing Green</a>, <a href="http://www.dasra.org" target="_blank">Dasra</a>, <a href="http://www.salesforcefoundation.org/" target="_blank">The Salesforce Foundation</a>, and <a href="http://www.rainerfellows.org" target="_blank">The Rainer Arnhold Fellowship Program</a>.
           </p>
-        </div>
       </div>
     </div>
   </div>
