--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -28,28 +28,25 @@
     <div class="product-list row" ontouchstart="this.classList.toggle('hover');">
       <div ng-repeat="product in products | filter:filterProducts" class="product-container col-lg-6 col-md-6 col-sm-6 col-xs-12">
         <div class="product">
-          <h3 class="title">
-            {{product.name}}
-          </h3>
-          <div class='content'>
-            {{product.description}}
-          </div>
           <div class='rating'>
             <i class="glyphicon glyphicon-star"></i>
             <i class="glyphicon glyphicon-star"></i>
             <i class="glyphicon glyphicon-star"></i>
             (237)
           </div>
+          <h3 class="title">
+            {{product.name}}
+          </h3>
+          <div class='content'>
+            {{product.description}}
+          </div>
+
           <a ng-href="{{product.website}}" class="website-link" target="_blank">
             <i class="glyphicon glyphicon-link"></i>
           </a>
-          <a ng-href="" class="details-link">
-            View Details
+          <a ng-href="/#/product/{{product.id}}" class="details-link">
+            DETAILS
           </a>
-
-<!--          <a ng-href="/#/product/{{product.id}}" class="details-link">
-            View Details
-          </a> -->
 
         </div>
       </div>
