--- a/public/the_bridge_templates/mappings/sf_row.html
+++ b/public/the_bridge_templates/mappings/sf_row.html
@@ -51,20 +51,14 @@
 </div>
 
 <div class='row odk-filter-row'>
-  <div class='col-md-8'>
+  <div class='pull-left'>
     <div class="form-group">
+      <div class="s-filter">
       <input ng-model="odkFilter.field_name" type='text' placeholder="Filter Source fields" class='form-control' />
+      </div>
     </div>
   </div>
 </div>
 
-<table class='table' style='margin-bottom: 0px;'>
-  <thead>
-    <tr>
-      <th width="5%">uuid</th>
-      <th width="50%">Source Field Name</th>
-      <th width="20%">Source Field Type</th>
-      <th width="25%">Destination Field</th>
-    </tr>
-  </thead>
-</table>
+
+
