--- a/public/the_bridge_templates/mappings/edit.html
+++ b/public/the_bridge_templates/mappings/edit.html
@@ -29,7 +29,7 @@
   <label>Data Source: {{mapping.odk_form.name}}</label>
 </div>
 
-<div class="row well sf-row" bs-affix data-offset-top="225" data-on-affix="onAffix()" data-on-unaffix="onUnaffix()">
+<div class="row sf-row" bs-affix data-offset-top="225" data-on-affix="onAffix()" data-on-unaffix="onUnaffix()">
   <div class='col-md-12' ng-include="'/the_bridge_templates/mappings/sf_row.html'"></div>
 </div>
 
