--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -44,7 +44,8 @@
           <a ng-href="{{product.website}}" class="website-link" target="_blank">
             <i class="glyphicon glyphicon-link"></i>
           </a>
-          <a ng-href="/#/product/{{product.id}}" class="details-link">
+          <a ng-href="" class="details-link">
+          <!--  <a ng-href="/#/product/{{product.id}}" class="details-link">  -->
             DETAILS
           </a>
 
