--- a/public/the_bridge_templates/static/welcome.html
+++ b/public/the_bridge_templates/static/welcome.html
@@ -117,7 +117,7 @@
               make<br/> this all possible
           </h2>
           <p class="lead">
-            We grew out of <a href="http://www.verasolutions.org" target="_blank">Vera Solutions</a>, technology partner to over 100 leading <em>impact-first</em> organizations in almost 40 countries, and have received generous support from <a href="http://www.echoinggreen.org" target="_blank">Echoing Green</a>, <a href="http://www.dasra.org" target="_blank">Dasra</a>, <a href="http://www.salesforcefoundation.org/" target="_blank">The Salesforce Foundation</a>, and <a href="http://www.http://www.mulagofoundation.org/" target="_blank">The Mulago Foundation</a>.
+            We grew out of <a href="http://www.verasolutions.org" target="_blank">Vera Solutions</a>, technology partner to over 100 leading <em>impact-first</em> organizations in almost 40 countries, and have received generous support from <a href="http://www.echoinggreen.org" target="_blank">Echoing Green</a>, <a href="http://www.dasra.org" target="_blank">Dasra</a>, <a href="http://www.salesforcefoundation.org/" target="_blank">The Salesforce Foundation</a>, and <a href="http://www.mulagofoundation.org/" target="_blank">The Mulago Foundation</a>.
           </p>
       </div>
     </div>
