Salesforce field labels are used instead of field names.

--- a/public/the_bridge_templates/mappings/odk_column.html
+++ b/public/the_bridge_templates/mappings/odk_column.html
@@ -16,8 +16,11 @@
       <td>SalesforceID</td>
       <td>
         <ul class="list-group sortable-location sf-connected-sortable sf-target" ui-sortable="sfSortableOptions" ng-model="salesforceObject.relationshipFields">
-          <li class="list-group-item sf-field" ng-repeat="relationshipField in salesforceObject.relationshipFields" ng-style="{'background-color': relationshipField.color}">
-            {{relationshipField.field_name}}
+          <li class="list-group-item sf-field" 
+            title="{{relationshipField.field_name}}" 
+            ng-repeat="relationshipField in salesforceObject.relationshipFields" 
+            ng-style="{'background-color': relationshipField.color}">
+            {{relationshipField.label_name || relationshipField.field_name}}
             <a href="#" class='glyphicon glyphicon-remove white' ng-click="deleteRelationship(relationshipField)"></a>
           </li>
         </ul>
@@ -32,8 +35,11 @@
       <td style="width: 20%">{{odkFormField.field_type}}</td>
       <td style='width: 25%'>
         <ul class="list-group sortable-location sf-connected-sortable sf-target" ui-sortable="sfSortableOptions" ng-model="odkFormField.salesforceFields">
-          <li class="list-group-item sf-field" ng-repeat="sfField in odkFormField.salesforceFields" ng-style="{'background-color': sfField.color}">
-            {{sfField.field_name}}
+          <li class="list-group-item sf-field" 
+            title="{{sfField.field_name}}" 
+            ng-repeat="sfField in odkFormField.salesforceFields" 
+            ng-style="{'background-color': sfField.color}">
+            {{sfField.label_name || sfField.field_name}}
             <a href="#" class='glyphicon glyphicon-remove white' ng-click="deleteField(sfField)"></a>
 
             <select ng-change="updateLookupField(odkFormField, sfField)" ng-model="sfField.lookupFieldName" ng-options="field.name as field.name for field in sfField.lookupFields" class='form-control' ng-show="sfField.data_type == 'reference'">
