--- a/public/the_bridge_templates/mappings/sf_row.html
+++ b/public/the_bridge_templates/mappings/sf_row.html
@@ -40,8 +40,8 @@
         <hr />
         <div class='external-field-holder'>
           <ul class='list-group sf-connected-sortable sortable-location' ui-sortable="sfSortableOptions" ng-model="sfObject.salesforceFields">
-            <li class='list-group-item sf-field' ng-repeat="sfField in sfObject.salesforceFields" ng-style="{'background-color': sfField.color}">
-              {{sfField.field_name}}
+            <li class='list-group-item sf-field' title="{{sfField.field_name}}" ng-repeat="sfField in sfObject.salesforceFields" ng-style="{'background-color': sfField.color}">
+              {{sfField.label_name || sfField.field_name}}
             </li>
           </ul>
         </div>
