--- a/public/the_bridge_templates/mappings/sf_row.html
+++ b/public/the_bridge_templates/mappings/sf_row.html
@@ -40,7 +40,13 @@
         <hr />
         <div class='external-field-holder'>
           <ul class='list-group sf-connected-sortable sortable-location' ui-sortable="sfSortableOptions" ng-model="sfObject.salesforceFields">
-            <li class='list-group-item sf-field' title="{{sfField.field_name}}" ng-repeat="sfField in sfObject.salesforceFields" ng-style="{'background-color': sfField.color}">
+            <li class='list-group-item sf-field' 
+              title="{{sfField.field_name}} ({{sfField.data_type}}){{sfField.required ? ' (required)' : ''}}" 
+              ng-repeat="sfField in sfObject.salesforceFields" 
+              ng-style="{'background-color': sfField.color}">
+              <div class="required" ng-show="sfField.required"></div>
+              <i title="Unique" class="unique fa fa-asterisk" ng-show="sfField.unique"></i>
+
               {{sfField.label_name || sfField.field_name}}
             </li>
           </ul>
