--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -45,7 +45,7 @@
             <i class="glyphicon glyphicon-link"></i>
           </a>
           <a ng-href="" class="details-link">
-          <!--  <a ng-href="/#/product/{{product.id}}" class="details-link">  -->
+          <a ng-href="/#/product/{{product.id}}" class="details-link">
             DETAILS
           </a>
 
