--- a/public/the_bridge_templates/release_notes/index.html
+++ b/public/the_bridge_templates/release_notes/index.html
@@ -27,7 +27,7 @@
 
       <div class="row">
               <div class="text-center">
-          <a href="mailto:td@verasolutions.org" class="btn btn-primary btn-lg">
+          <a href="mailto:admin@openfn.org" class="btn btn-primary btn-lg">
             <i class="fa fa-life-buoy"></i>
             Help Out!
           </a>
