deactivate product detail link

--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -32,7 +32,7 @@
             <i class="glyphicon glyphicon-star"></i>
             <i class="glyphicon glyphicon-star"></i>
             <i class="glyphicon glyphicon-star"></i>
-            (237)
+            (sample rating)
           </div>
           <h3 class="title">
             {{product.name}}
@@ -44,9 +44,13 @@
           <a ng-href="{{product.website}}" class="website-link" target="_blank">
             <i class="glyphicon glyphicon-link"></i>
           </a>
-          <a ng-href="" class="details-link">
+          <!-- MAKE THIS LINK DO NOTHING UNTIL PRODUCT PAGE LOOKS GREAT
           <a ng-href="/#/product/{{product.id}}" class="details-link">
             DETAILS
+          </a>
+          -->
+          <a ng-href="#" class="details-link">
+            details coming soon
           </a>
 
         </div>
