--- a/public/the_bridge_templates/product/show.html
+++ b/public/the_bridge_templates/product/show.html
@@ -44,7 +44,7 @@
         <i class="glyphicon glyphicon-star"></i>
         <i class="glyphicon glyphicon-star"></i>
         <i class="glyphicon glyphicon-star"></i>
-        (237)
+        (sample rating)
       </div>
       <div class='actions'>
         <a ng-href="{{product.website}}" target="_blank"><i class="glyphicon glyphicon-link"></i></a>
