Show unique on hover title for Salesforce fields.

--- a/public/the_bridge_templates/mappings/sf_row.html
+++ b/public/the_bridge_templates/mappings/sf_row.html
@@ -41,7 +41,7 @@
         <div class='external-field-holder'>
           <ul class='list-group sf-connected-sortable sortable-location' ui-sortable="sfSortableOptions" ng-model="sfObject.salesforceFields">
             <li class='list-group-item sf-field' 
-              title="{{sfField.field_name}} ({{sfField.data_type}}){{sfField.required ? ' (required)' : ''}}" 
+              title="{{sfField.field_name}} ({{sfField.data_type}}){{sfField.required ? ' (required)' : ''}}{{sfField.unique ? ' (unique)' : ''}}" 
               ng-repeat="sfField in sfObject.salesforceFields" 
               ng-style="{'background-color': sfField.color}">
               <div class="required" ng-show="sfField.required"></div>
