--- a/public/the_bridge_templates/mappings/odk_column.html
+++ b/public/the_bridge_templates/mappings/odk_column.html
@@ -17,7 +17,7 @@
       <td>
         <ul class="list-group sortable-location sf-connected-sortable sf-target" ui-sortable="sfSortableOptions" ng-model="salesforceObject.relationshipFields">
           <li class="list-group-item sf-field" 
-            title="{{relationshipField.field_name}} ({{relationshipField.data_type}}){{relationshipField.required ? ' (required)' : ''}}" 
+            title="{{relationshipField.field_name}} ({{relationshipField.data_type}}){{relationshipField.required ? ' (required)' : ''}}{{relationshipField.unique ? ' (unique)' : ''}}" 
             ng-repeat="relationshipField in salesforceObject.relationshipFields" 
             ng-style="{'background-color': relationshipField.color}">
             <div class="required" ng-show="relationshipField.required"></div>
@@ -38,7 +38,7 @@
       <td style='width: 25%'>
         <ul class="list-group sortable-location sf-connected-sortable sf-target" ui-sortable="sfSortableOptions" ng-model="odkFormField.salesforceFields">
           <li class="list-group-item sf-field" 
-              title="{{sfField.field_name}} ({{sfField.data_type}}){{sfField.required ? ' (required)' : ''}}" 
+            title="{{sfField.field_name}} ({{sfField.data_type}}){{sfField.required ? ' (required)' : ''}}{{sfField.unique ? ' (unique)' : ''}}" 
             ng-repeat="sfField in odkFormField.salesforceFields" 
             ng-style="{'background-color': sfField.color}">
 
