--- a/public/the_bridge_templates/release_notes/index.html
+++ b/public/the_bridge_templates/release_notes/index.html
@@ -21,27 +21,33 @@
     <hr class="dark">
     <hr class="light">
 </div>
-
+<footer>
   <div class="container">
-    <footer>
-
+    <div class="featurette">  
       <div class="row">
               <div class="text-center">
           <a href="mailto:admin@openfn.org" class="btn btn-primary btn-lg">
             <i class="fa fa-life-buoy"></i>
-            Help Out!
+            Help!
           </a>
         </div>
       </div>
-      
       <div class="row">
         <div class="col-sm-10 col-sm-offset-1">
           <p class="text-center">
-            Still want more? Check out xkcd's animation of the Rosetta mission <a href="http://xkcd.com/1446/">here.</a>
+            Open[Fn] needs your help. We're currently seeking editors, developers, and funding.
+            </br>Contact us if you'd like to pitch in. We believe in open-source, and all of our code
+            <br/> is available on Github under the GPLv3.0 license.
           </p>
         </div>
       </div>
-    </footer>
-  </div>
-
+      <div class="row" id="opensource-links">
+        <div class="text-center">
+          <a href="https://github.com/OpenFn/OpenFn-Site">
+            <i class="fa fa-github"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+  </footer>
 </div>
