Import all Salesforce attributes as JSON, exclude system fields.
This change changes the structure of the SaleforceField table and adds
a json column called `properties`. The new structure copies across the
old fields into the new properties attribute, and should be backwards
compatible.

--- a/public/the_bridge_templates/mappings/sf_row.html
+++ b/public/the_bridge_templates/mappings/sf_row.html
@@ -41,13 +41,13 @@
         <div class='external-field-holder'>
           <ul class='list-group sf-connected-sortable sortable-location' ui-sortable="sfSortableOptions" ng-model="sfObject.salesforceFields">
             <li class='list-group-item sf-field' 
-              title="{{sfField.field_name}} ({{sfField.data_type}}){{sfField.required ? ' (required)' : ''}}{{sfField.unique ? ' (unique)' : ''}}" 
+              title="{{sfField.field_name}} ({{sfField.properties.type}}){{sfField.properties.nillable ? '' : ' (required)'}}{{sfField.properties.unique ? ' (unique)' : ''}}" 
               ng-repeat="sfField in sfObject.salesforceFields" 
               ng-style="{'background-color': sfField.color}">
-              <div class="required" ng-show="sfField.required"></div>
-              <i title="Unique" class="unique fa fa-asterisk" ng-show="sfField.unique"></i>
+              <div class="required" ng-hide="sfField.properties.nillable"></div>
+              <i title="Unique" class="unique fa fa-asterisk" ng-show="sfField.properties.unique"></i>
 
-              {{sfField.label_name || sfField.field_name}}
+              {{sfField.properties.label || sfField.field_name}}
             </li>
           </ul>
         </div>
