padding top header

--- a/public/the_bridge_templates/static/pricing.html
+++ b/public/the_bridge_templates/static/pricing.html
@@ -1,10 +1,17 @@
 <div class="pricing">
-  <!-- Full Width Image Header -->
+<div class="ideas">
+<header class="header-image">
+  <div class="headline">
+    <h1><strong>PRICING</strong></h1>
+  </div>
+</header>
+
+<div class="featurette dark">
+  <hr class="light">
+    <hr class="dark">
     <div class="container">
 
-        <h1 class="page-header">Pricing</h1>
-
-        <p>&nbsp;</p>
+        <br>
 
         <div class="row flat">
             <div class="col-lg-2 col-md-3 col-xs-6 col-lg-offset-1">
